force-app/main/default/objects/Device_Anomaly__e/Device_Anomaly__e.object-meta.xml
<CustomObject>
    <description>Platform Event published by external telemetry / manufacturing-quality systems when a hardware anomaly is detected. Consumed by the Device Anomaly Triage Agent.</description>
    <label>Device Anomaly</label>
    <pluralLabel>Device Anomalies</pluralLabel>
</CustomObject>