force-app/main/default/objects/Device_Anomaly__e/fields/Account_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_External_Id__c</fullName>
    <label>Account External Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>