force-app/main/default/objects/Device_Anomaly__e/fields/Anomaly_Category__c.field-meta.xml
<CustomField>
    <fullName>Anomaly_Category__c</fullName>
    <description>Allowed values: Thermal, Electrical, Mechanical, Yield, Firmware, Network, RF, Memory_ECC. Validated by publisher contract, not picklist (PEs cannot have restricted picklists).</description>
    <label>Anomaly Category</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>