force-app/main/default/objects/Device_Anomaly__e/fields/Anomaly_Code__c.field-meta.xml
<CustomField>
    <fullName>Anomaly_Code__c</fullName>
    <label>Anomaly Code</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>