force-app/main/default/objects/Device_Anomaly__e/fields/Detected_At__c.field-meta.xml
<CustomField>
    <fullName>Detected_At__c</fullName>
    <label>Detected At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>