force-app/main/default/objects/Device_Anomaly__e/fields/Device_Serial__c.field-meta.xml
<CustomField>
    <fullName>Device_Serial__c</fullName>
    <label>Device Serial</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>