force-app/main/default/objects/Device_Anomaly__e/fields/Pattern_Hash__c.field-meta.xml
<CustomField>
    <fullName>Pattern_Hash__c</fullName>
    <label>Pattern Hash</label>
    <length>64</length>
    <type>Text</type>
</CustomField>