force-app/main/default/objects/Device_Anomaly__e/fields/Replay_Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>Replay_Correlation_Id__c</fullName>
    <label>Replay Correlation Id</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
</CustomField>