force-app/main/default/objects/Device_Anomaly__e/fields/Severity_Signal__c.field-meta.xml
<CustomField>
    <fullName>Severity_Signal__c</fullName>
    <description>Allowed values: Critical, High, Medium, Low. Vendor&apos;s signal severity; agent re-classifies into Tier 1/2/3.</description>
    <label>Severity Signal</label>
    <length>16</length>
    <required>true</required>
    <type>Text</type>
</CustomField>