force-app/main/default/objects/Device_Anomaly__e/fields/Site_Code__c.field-meta.xml
<CustomField>
    <fullName>Site_Code__c</fullName>
    <label>Site Code</label>
    <length>32</length>
    <type>Text</type>
</CustomField>