force-app/main/default/objects/Device_Anomaly__e/fields/Telemetry_Payload__c.field-meta.xml
<CustomField>
    <fullName>Telemetry_Payload__c</fullName>
    <description>JSON blob of raw signal data. Required by publisher contract (PEs cannot mark LongText as required).</description>
    <label>Telemetry Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>